[workspace]
members = [
  "lief-patchelf",
]
resolver = "2"

[workspace.package]
authors = ["Romain Thomas <me@romainthomas.fr>"]
edition = "2021"
rust-version = "1.74.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
strip = "symbols"
lto = "fat"
panic = "abort"
