[metadata]
name          = lief
description   = LIEF is a library to instrument executable formats
author        = Romain Thomas
author_email  = rthomas@quarkslab.com
url           = https://lief.quarkslab.com
license       = Apache 2.0
keywords      = parser, elf, pe, macho
classifiers   =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
	Intended Audience :: Science/Research
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX :: Linux
  Operating System :: Microsoft :: Windows
  Programming Language :: C++
  Programming Language :: Python :: 2
  Programming Language :: Python :: 3
  Topic :: Software Development :: Libraries
  Topic :: Security
  Topic :: Scientific/Engineering :: Information Analysis
	Topic :: Software Development :: Build Tools

[options]
zip_safe = False
packages = lief


